# intania-jukebox

./: LICENSE  README.md  intania-jukebox.code-workspace
.github/workflows/: ci-music-manager.yml
frontend/: .env.example  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/: env.ts
frontend/src/app/: layout.tsx
frontend/src/hooks/: useMusic.ts  useMusicQueue.ts  useSpotify.ts  useSpotifyQuery.ts
frontend/src/music_manager/: fetch.ts  mapper.ts
frontend/src/spotify/: access_token.ts  fetch.server.ts  getTrack.ts  (+5 more)
keypad/: get.py  mqtt.py  music.py
keypad-test/: blink.py
music-manager/: .env.example  README.md  pm2.config.json  pyproject.toml  requirements.txt
music-manager/app/: __init__.py  __main__.py  main.py  run.py
music-manager/app/config/: env.py
music-manager/app/core/entity/: music.py  music_queue.py  music_queue_item.py  queue.py  song.py
music-manager/app/core/mapper/: music_queue.py  music_queue_item.py  song.py
music-manager/app/core/repository/: music_queue.py  music_queue_item.py  song.py
music-manager/app/core/usecase/: crud_music_queue_item.py  crud_song.py  music_queue.py
music-manager/app/infra/controller/: home.py  music_queue_item.py  queue.py  song.py
music-manager/app/infra/db/: init.py  model.py  mongodb.py
music-manager/app/infra/http/: flask.py
music-manager/app/infra/mapper/response/: flask.py
music-manager/app/infra/repository/: queue.py
music-manager/app/infra/repository/db/: music_queue_item.py  song.py
music-manager/app/infra/repository/memory/: music_queue.py  music_queue_item.py  song.py
music-manager/app/seed/: memory.py
music-manager/app/utils/: format_time.py  logger.py  singleton.py
music-manager/tests/core/entity/: test_music.py  test_queue.py
music-manager/tests/utils/: test_format_time.py
(+41 files in other folders)
