[tool.poetry]
name = "music-manager"
version = "0.1.0"
description = ""
authors = ["betich <betich365@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.1.0"
numpy = "^2.1.3"
pymongo = "^4.10.1"


[tool.poetry.scripts]
start = "app.run:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
