[tool.poetry]
name = "music-manager"
version = "1.0.0"
description = ""
authors = ["betich <betich365@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.1.0"
numpy = "^2.1.3"
pymongo = "^4.10.1"
sqlalchemy = "^2.0.36"
flask-swagger-ui = "^4.11.1"
flask-cors = "^5.0.0"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
flask-socketio = "^5.4.1"


[tool.poetry.scripts]
start = "app.run:main"

[tool.poetry.group.test.dependencies]  
pytest-randomly = "^3.15.0"  
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
